--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+
     <string name="app_name">Home Solution</string>
     <string name="facebook_app_id">1681928755418939</string>
     <string name="title_activity_panel">Panel de usuario</string>
@@ -7,7 +8,6 @@
 
     <string name="preference_file">Preferences</string>
     <string name="first_activity">FirstActivity</string>
-    <string name="first_activity_default">.ui.RegistroActivity</string>
-
+    <string name="first_activity_default">.ui.RegisterActivity</string>
 
 </resources>
