--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,24 +2,26 @@
 
     <string name="app_name">Home Solution</string>
     <string name="facebook_app_id">1681928755418939</string>
+
+    <!-- PanelActivity -->
     <string name="title_activity_panel">Panel de usuario</string>
     <string name="action_settings">Opciones</string>
-    <string name="section_format">Sección: %1$d</string>
 
+    <!-- Define the first screen when the app starts -->
     <string name="preference_file">Preferences</string>
     <string name="first_activity">FirstActivity</string>
     <string name="first_activity_default">.ui.RegisterActivity</string>
 
+    <!-- ScoreActivity -->
     <string name="next">Siguiente</string>
     <string name="prev">Anterior</string>
     <string name="finish">Calificar</string>
-
     <string name="submit_confirm_message">¿Está seguro de enviar esta calificación?</string>
     <string name="submit_confirm_button">Confirmar</string>
-
-    <string name="label_your_name">Nombre</string>
-    <string name="hint_your_name">e.g. Juan</string>
     <string name="label_spinner_category">Categoría de trabajo</string>
+
+    <!-- Terms and conditions -->
+    <string name="terms_conditions">Toda persona que quiera utilizar los servicios debe leer, entender y aceptar las condiciones establecidas en los Términos y Condiciones Generales y en las Políticas de Privacidad así como en los demás documentos incorporados a los mismos por referencia, previo a su registración como Usuario de Home Solution ™.\n\nLos Servicios sólo están disponibles para personas que tengan capacidad legal para contratar y capacidad legal para trabajar, según la normativa vigente a tales efectos en la República Argentina. No podrán utilizar los servicios las personas que no tengan esa capacidad, los menores de edad o Usuarios/Prestadores de Home Solution ™ que hayan sido suspendidos temporalmente o inhabilitados definitivamente. Si estás registrando un Usuario/Prestador como Empresa, debes contar con la representación necesaria otorgada por la entidad y, por carácter transitivo, obligar a la misma en los términos de este Acuerdo.</string>
 
     <!-- Just for debug GCM -->
     <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
