--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
 
     <string name="app_name">Home Solution</string>
+
+    <!-- Social login -->
     <string name="facebook_app_id">1681928755418939</string>
 
     <!-- PanelActivity -->
